--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<title>Flare Dendrogram</title>
 <style>
 
 .node circle {
@@ -23,47 +24,45 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
-var width = 960,
-    height = 2200;
+var radius = 960 / 2;
 
 var cluster = d3.layout.cluster()
-    .size([height, width - 160]);
+    .size([360, radius - 120]);
 
-var diagonal = d3.svg.diagonal()
-    .projection(function(d) { return [d.y, d.x]; });
+var diagonal = d3.svg.diagonal.radial()
+    .projection(function(d) { return [d.y, d.x / 180 * Math.PI]; });
 
 var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height)
+    .attr("width", radius * 2)
+    .attr("height", radius * 2)
   .append("g")
-    .attr("transform", "translate(40,0)");
+    .attr("transform", "translate(" + radius + "," + radius + ")");
 
 d3.json("/d/4063550/flare.json", function(error, root) {
-  var nodes = cluster.nodes(root),
-      links = cluster.links(nodes);
+  var nodes = cluster.nodes(root);
 
-  var link = svg.selectAll(".link")
-      .data(links)
+  var link = svg.selectAll("path.link")
+      .data(cluster.links(nodes))
     .enter().append("path")
       .attr("class", "link")
       .attr("d", diagonal);
 
-  var node = svg.selectAll(".node")
+  var node = svg.selectAll("g.node")
       .data(nodes)
     .enter().append("g")
       .attr("class", "node")
-      .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
+      .attr("transform", function(d) { return "rotate(" + (d.x - 90) + ")translate(" + d.y + ")"; })
 
   node.append("circle")
       .attr("r", 4.5);
 
   node.append("text")
-      .attr("dx", function(d) { return d.children ? -8 : 8; })
-      .attr("dy", 3)
-      .style("text-anchor", function(d) { return d.children ? "end" : "start"; })
+      .attr("dy", ".31em")
+      .attr("text-anchor", function(d) { return d.x < 180 ? "start" : "end"; })
+      .attr("transform", function(d) { return d.x < 180 ? "translate(8)" : "rotate(180)translate(-8)"; })
       .text(function(d) { return d.name; });
 });
 
-d3.select(self.frameElement).style("height", height + "px");
+d3.select(self.frameElement).style("height", radius * 2 + "px");
 
 </script>
