--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + radius + "," + radius + ")");
 
-d3.json("flare.json", function(root) {
+function drawChart(root) {
   var nodes = cluster.nodes(root);
 
   var link = svg.selectAll("path.link")
@@ -61,7 +61,9 @@ d3.json("flare.json", function(root) {
       .attr("text-anchor", function(d) { return d.x < 180 ? "start" : "end"; })
       .attr("transform", function(d) { return d.x < 180 ? "translate(8)" : "rotate(180)translate(-8)"; })
       .text(function(d) { return d.name; });
-});
+}
+
+d3.json("flare.json", drawChart);
 
 d3.select(self.frameElement).style("height", radius * 2 + "px");
 
